--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-** This is for Coursera Data Science Specification/Getting and Clearning Data/Course project
+## This is for Coursera Data Science Specification/Getting and Clearning Data/Course project
 
 * The objetive is to have a tidy data by combination, renaming, filtering and aggregation in R.
 
